--- a/table.html
+++ b/table.html
@@ -182,7 +182,7 @@ div{
 
       function tryGet() {
        alert("tryGet");
-        if (ws.readyState == OPEN)
+        if (ws.readyState == 1)
         { 
            ws.send("GET");
         } else {
