--- a/master.html
+++ b/master.html
@@ -108,23 +108,23 @@
         <div id='score1'></div></h2>
 
     <br>
-      <input type="radio" name="category" value="SB" onchange="sendResults(this.name, this.value)">Sword &amp; Shield &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <input type="radio" name="category" value="LS" onchange="sendResults(this.name, this.value)">Longsword &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <input type="radio" name="category" value="PA" onchange="sendResults(this.name, this.value)">Polearm
+      <input type="radio" name="category" value="SWORD & SHIELD" onchange="sendResults(this.name, this.value)">Sword &amp; Shield &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <input type="radio" name="category" value="LONGSWORD" onchange="sendResults(this.name, this.value)">Longsword &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <input type="radio" name="category" value="POLEARM" onchange="sendResults(this.name, this.value)">Polearm
 
     <br>
-      <input type="radio" name="side-0" value="F1" onchange="sendResults(this.name, this.value)">F1  |  F1<input type="radio" name="side-1" value="F1" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="F2" onchange="sendResults(this.name, this.value)">F2  |  F2<input type="radio" name="side-1" value="F2" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="F3" onchange="sendResults(this.name, this.value)">F3  |  F3<input type="radio" name="side-1" value="F3" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="F4" onchange="sendResults(this.name, this.value)">F4  |  F4<input type="radio" name="side-1" value="F4" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="F5" onchange="sendResults(this.name, this.value)">F5  |  F5<input type="radio" name="side-1" value="F5" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="F6" onchange="sendResults(this.name, this.value)">F6  |  F6<input type="radio" name="side-1" value="F6" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Tanaka.J" onchange="sendResults(this.name, this.value)">Tanaka.J  |  Tanaka.J<input type="radio" name="side-1" value="Tanaka.J" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Tada" onchange="sendResults(this.name, this.value)">Tada  |  Tada<input type="radio" name="side-1" value="Tada" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Tony" onchange="sendResults(this.name, this.value)">Tony  |  Tony<input type="radio" name="side-1" value="Tony" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Joshua" onchange="sendResults(this.name, this.value)">Joshua  |  Joshua<input type="radio" name="side-1" value="Joshua" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Satou" onchange="sendResults(this.name, this.value)">Satou  |  Satou<input type="radio" name="side-1" value="Satou" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Ami" onchange="sendResults(this.name, this.value)">Ami  |  Ami<input type="radio" name="side-1" value="Ami" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="F7" onchange="sendResults(this.name, this.value)">F7  |  F7<input type="radio" name="side-1" value="F7" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="F8" onchange="sendResults(this.name, this.value)">F8  |  F8<input type="radio" name="side-1" value="F8" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Tanaka.K" onchange="sendResults(this.name, this.value)">Tanaka.K  |  Tanaka.K<input type="radio" name="side-1" value="Tanaka.K" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="F9" onchange="sendResults(this.name, this.value)">F9  |  F9<input type="radio" name="side-1" value="F9" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="T1" onchange="sendResults(this.name, this.value)">T1  |  T1<input type="radio" name="side-1" value="T1" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="T2" onchange="sendResults(this.name, this.value)">T2  |  T2<input type="radio" name="side-1" value="T2" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="T3" onchange="sendResults(this.name, this.value)">T3  |  T3<input type="radio" name="side-1" value="T3" onchange="sendResults(this.name, this.value)">
+      <input type="radio" name="side-0" value="Dracones" onchange="sendResults(this.name, this.value)">Dracones  |  Dracones<input type="radio" name="side-1" value="Dracones" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Sanglier" onchange="sendResults(this.name, this.value)">Sanglier  |  Sanglier<input type="radio" name="side-1" value="Sanglier" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Kuroganeshu" onchange="sendResults(this.name, this.value)">Kuroganeshu  |  Kuroganeshu<input type="radio" name="side-1" value="Kuroganeshu" onchange="sendResults(this.name, this.value)">
 
 <div class="view">
     <table>
