--- a/table.html
+++ b/table.html
@@ -9,12 +9,86 @@
     border-collapse: collapse;
         border-spacing: 0;
     width:100%;
+    height:14%;
+    margin:0px;padding:0px;
+   font-size:30px;
+   color:black;
+   text-align:center;
+   font-weight:bold;
+}
+.board {
+    margin:0px;padding:0px;
+    width:100%;
+}
+.board table{
+   text-align:center;
+    border-collapse: collapse;
+        border-spacing: 0;
+    width:100%;
     height:20%;
     margin:0px;padding:0px;
 }
+
+.vs{
+   font-weight:bold;
+   font-size:64px;
+   color:#303030;
+   padding-left:48px;
+   padding-right:48px;
+   text-align:center;
+}
+.fscore {
+   background-color:white;
+   color:black;
+   font-weight:bold;
+    font-size:64px;
+
+    border:2px solid black;
+
+    -moz-border-radius-bottomleft:4px;
+    -webkit-border-bottom-left-radius:4px;
+    border-bottom-left-radius:4px;
+
+    -moz-border-radius-bottomright:4px;
+    -webkit-border-bottom-right-radius:4px;
+    border-bottom-right-radius:4px;
+
+    -moz-border-radius-topright:4px;
+    -webkit-border-top-right-radius:4px;
+    border-top-right-radius:4px;
+
+    -moz-border-radius-topleft:4px;
+    -webkit-border-top-left-radius:4px;
+    border-top-left-radius:4px;
+
+}
+.fname {
+   background-color:black;
+   color:white;
+   font-weight:bold;
+    font-size:50px;
+
+    border:2px solid white;
+
+    -moz-border-radius-bottomleft:8px;
+    -webkit-border-bottom-left-radius:8px;
+    border-bottom-left-radius:8px;
+
+    -moz-border-radius-bottomright:8px;
+    -webkit-border-bottom-right-radius:8px;
+    border-bottom-right-radius:8px;
+
+    -moz-border-radius-topright:8px;
+    -webkit-border-top-right-radius:8px;
+    border-top-right-radius:8px;
+
+    -moz-border-radius-topleft:8px;
+    -webkit-border-top-left-radius:8px;
+    border-top-left-radius:8px;
+}
 .tftable {
     background:url("jabl.png") no-repeat;
-    margin:0px;padding:0px;
+    margin:20px 0px 0px 0px;padding:0px;
     width:100%;
     box-shadow: 10px 10px 5px #888888;
     border:1px solid black;
@@ -38,7 +112,7 @@
     border-collapse: collapse;
         border-spacing: 0;
     width:100%;
-    height:60%;
+    height:56%;
     margin:0px;padding:0px;
 }.tftable tr:last-child td:last-child {
     -moz-border-radius-bottomright:6px;
@@ -219,31 +293,31 @@ div{
       <tr id="phase"></tr>
     </table>
     </div>
-    <div class="view">
+    <div class="board">
     <table>
       <tr>
-        <td><img id="img0" src="smiley.gif" height="42" width="42"></td>
-        <td id="side-0"></td>
-        <td>VS</td>
-        <td><img id="img1" src="smiley.gif" height="42" width="42"></td>
-        <td id="img-1">Team2</td>
+        <td rowspan="2" style="float:right;"><img id="img0" src="smiley.gif" height="180" width="146"></td>
+        <td width="90px"><div id="score0" class="fscore" style="float:right;width:90px;"></div></td>
+        <td rowspan="2"><div class="vs">VS</div></td>
+        <td width="90px"><div id="score1" class="fscore" style="float:left;width:90px;"></div></td>
+        <td rowspan="2" style="float:left;"><img id="img1" src="smiley.gif" height="180" width="146"></td>
       </tr>
       <tr>
-        <td></td>
-        <td id="score0"></td>
-        <td></td>
-        <td id="score1"></td>
-        <td></td>
+        <td width="0px" rowspan="0"></td>
+        <td width="50%"><div id="side-0" class="fname" style="float:right;padding-left:80px;"/></td>
+        <td width="50%"><div id="side-1" class="fname" style="float:left;padding-right:80px;"/></td>
+        <td width="0px" rowspan="0"></td>
       </tr>
     </table>
+    </div>
     <div class = "tftable">
     <table>
-      <tr>
+      <tr height="10%">
         <th style="border-width:1px;border-style:solid;"></th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Sword &amp; Shield</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
-      <tr><th rowspan="2"><img src="T1.png" height="42" width="42"></th>
+      <tr height="10%"><th rowspan="2"><img src="Dracones.png" height="108" width="85" style="padding:8px;"></th>
           <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
@@ -276,7 +350,7 @@ div{
           <td id="1-3-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
       </tr>
 
-      <tr><th rowspan="2"><img src="T2.png" height="42" width="42"></th>
+      <tr height="10%"><th rowspan="2"><img src="Sanglier.png" height="120" width="95" style="padding:8px;"></th>
           <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
@@ -309,7 +383,7 @@ div{
           <td id="2-3-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
       </tr>
 
-      <tr><th rowspan="2"><img src="T3.png" height="42" width="42"></th>
+      <tr height="10%"><th rowspan="2"><img src="Kuroganeshu.png" height="108" width="85" style="padding:8px;"></th>
           <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
@@ -342,7 +416,6 @@ div{
           <td id="3-3-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
       </tr>
 </table>
-</div>
 </div>
 
   </body>
