--- a/table.html
+++ b/table.html
@@ -142,7 +142,7 @@
     border-width:1px 1px 1px 1px;
     text-align:center;
     padding:4px;
-    font-size:16px;
+    font-size:38px;
     font-family:Arial;
     font-weight:normal;
     color:#000000;
@@ -304,8 +304,8 @@ div{
       </tr>
       <tr>
         <td width="0px" rowspan="0"></td>
-        <td width="50%"><div id="side-0" class="fname" style="float:right;padding-left:80px;"/></td>
-        <td width="50%"><div id="side-1" class="fname" style="float:left;padding-right:80px;"/></td>
+        <td width="50%"><div id="side-0" class="fname" style="float:right;width:270px;"/></td>
+        <td width="50%"><div id="side-1" class="fname" style="float:left;width:270px;"/></td>
         <td width="0px" rowspan="0"></td>
       </tr>
     </table>
@@ -317,13 +317,13 @@ div{
         <th colspan="6" style="border-width:1px;border-style:solid;">Sword &amp; Shield</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
-      <tr height="10%"><th rowspan="2"><img src="Dracones.png" height="108" width="85" style="padding:8px;"></th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+      <tr height="10%" width="150px"><th rowspan="2"><img src="Dracones.png" height="108" width="85" style="padding:8px;"></th>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Tanaka.J</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Tada</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Tony</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
       </tr>
       <tr><td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
           <td id="1-1-2-n" style="border-style:dotted dotted solid dotted;"></td>
@@ -351,12 +351,12 @@ div{
       </tr>
 
       <tr height="10%"><th rowspan="2"><img src="Sanglier.png" height="120" width="95" style="padding:8px;"></th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Joshua</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Satou</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Ami</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
       </tr>
       <tr><td id="2-1-1-n" style="border-style:dotted dotted solid solid;"></td>
           <td id="2-1-2-n" style="border-style:dotted dotted solid dotted;"></td>
@@ -384,12 +384,12 @@ div{
       </tr>
 
       <tr height="10%"><th rowspan="2"><img src="Kuroganeshu.png" height="108" width="85" style="padding:8px;"></th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>???</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Tanaka.K</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>???</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
       </tr>
       <tr><td id="3-1-1-n" style="border-style:dotted dotted solid solid;"></td>
           <td id="3-1-2-n" style="border-style:dotted dotted solid dotted;"></td>
