--- a/counter.html
+++ b/counter.html
@@ -1,21 +1,10 @@
 <html>
   <head>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,width=device-width,user-scalable=no" />
     <style>
       body {
-        font-family: "Helvetica Neue", helvetica, arial;
-        padding: 15px;
-      }
-
-      ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
- 
-      ul li {
-        line-height: 1.4;
+        margin:0px;padding:0px;
+        width:100%;
       }
 
       button {
