--- a/counter.html
+++ b/counter.html
@@ -24,6 +24,7 @@
         ws.onmessage = function (event) {
           //  document.getElementById("count").innerHTML = JSON.parse(event.data);
           var scores = JSON.parse(event.data);
+          alert(scores.length.toString()+"-"+scores[2].toString()+"-"+side.toString()+"-"+scores[side].toString());
   
           if (scores.length == 3 && scores[2] == -1) {
               document.getElementById("count").innerHTML = scores[side];
@@ -48,7 +49,7 @@
       };
  
       function retryOpeningWebSocket(){
-        setTimeout(openWebSocket, 1000);            
+        setTimeout(function(){openWebSocket();}, 1000);            
       }
 
     </script>
@@ -56,6 +57,6 @@
   <body>
     <button onclick="sendPoint()">POINT!</button>
     <h1>Score:</h1>
-    <h2><div id='count'></div></h2>
+    <h2><div id="count"></div></h2>
   </body>
 </html>
