--- a/index.html
+++ b/index.html
@@ -14,31 +14,16 @@
 
       ul li {
         line-height: 1.4;
+        font-size:38px;
+        padding: 15px;
       }
     </style>
-
-    <script>
-      //var host = window.location.origin.replace(/^http/, 'ws')
-      var host = "ws://" + window.location.hostname + ":" + window.location.port; 
-      var ws = new WebSocket(host);
-      ws.onmessage = function (event) {
-        var li = document.createElement('li');
-        li.innerHTML = JSON.parse(event.data);
-        //document.querySelector('#pings').innerHTML = JSON.parse(event.data);
-        document.getElementById("pings").innerHTML = JSON.parse(event.data);
-      };
-      function sendPoint() {
-        ws.send("Point");
-      }
-      function sendReset() {
-        ws.send("Reset");
-      }
-    </script>
   </head>
   <body>
-    <button onclick="sendPoint()">POINT!</button>
-    <button onclick="sendReset()">RESET</button>
-    <h1>Score:</h1>
-    <h2><div id='pings'></div></h2>
+    <ul>
+       <li><a href="http://steelscore3.herokuapp.com/counter?side=0">Judge side A</a></li>
+       <li><a href="http://steelscore3.herokuapp.com/counter?side=1">Judge side B</a></li>
+       <li><a href="http://steelscore3.herokuapp.com/master">Control</a></li>
+       <li><a href="http://steelscore3.herokuapp.com/viewer">View</a></li>
   </body>
 </html>
