--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
        <li><a href="http://steelscore3.herokuapp.com/counter?side=0">Judge side A</a></li>
        <li><a href="http://steelscore3.herokuapp.com/counter?side=1">Judge side B</a></li>
        <li><a href="http://steelscore3.herokuapp.com/master">Control</a></li>
-       <li><a href="http://steelscore3.herokuapp.com/viewer">View</a></li>
+       <li><a href="http://steelscore3.herokuapp.com/table">View</a></li>
   </body>
 </html>
