--- a/table.html
+++ b/table.html
@@ -4,6 +4,8 @@
 .view {
     margin:0px;padding:0px;
     width:100%;
+    background:black;
+    height:40px;
 }
 .view table{
     border-collapse: collapse;
@@ -12,7 +14,7 @@
     height:14%;
     margin:0px;padding:0px;
    font-size:30px;
-   color:black;
+   color:white;
    text-align:center;
    font-weight:bold;
 }
@@ -155,7 +157,7 @@
     border-collapse: collapse;
         border-spacing: 0;
     width:100%;
-    height:56%;
+    height:52%;
     margin:0px;padding:0px;
 }.tftable tr:last-child td:last-child {
     -moz-border-radius-bottomright:6px;
